<resources>
    <string name="app_name">Estación Vital</string>
    <string name="name_hint_label">Nombre</string>
    <string name="lastName_hint_label">Apellido</string>
    <string name="email_hint_label">E-mail</string>
    <string name="birthDate_hint_label">Fecha de nacimiento</string>
    <string name="gender_hint_label">Género</string>
    <string name="gender_male_hint_label">Masculino</string>
    <string name="gender_female_hint_label">Femenino</string>
    <string name="num_tel_label">Número de teléfono</string>
    <string name="validation_code_label">Código de confirmación</string>
    <string name="verify_number">Verificar</string>
    <string name="validate_code">Validar</string>
    <string name="confirmation_register">Confirmar</string>
    <string name="cancel_register">Cancelar</string>

    <string name="verify_number_activity_title">Verificación de teléfono</string>
    <string name="verify_code_activity_title">Verificación SMS</string>

    <!-- Contenido de labels-->
    <string name="label_club_suscription">Por favor, elige los servicios a los cuales te deseas suscribir:</string>
    <string name="label_confirmation_suscription">Estimado cliente, usted no se encuentra suscrito al club Estación Vital. ¿Desea suscribirse?</string>
    <string name="label_confirmation_code_msg">Te hemos enviado un SMS con un código de confirmación al número antes digitado.\nPara completar la verificación de su número de teléfono, introduzca el código de confirmación</string>
    <!--Mensajes de inputs-->
    <string name="required_input_phone_number">El número celular es requerido</string>
    <string name="invalid_input_phone_number">El número celular debe ser de 8 dígitos</string>

    <!--Mensajes de carga-->
    <string name="validate_movistar_progress">Validando número Movistar</string>
    <string name="sms_code_progress">Solicitando código SMS</string>

    <!--Web service validation messages-->
    <string name="not_movistar_msg">El número ingresado no es movistar</string>

    <!--Generic error message-->
    <string name="generic_500_error">Hubo un error de conexión. Intente en un momento, por favor.</string>
    <string name="required_input_code">El código de confirmación es requerido</string>
    <string name="code_verification_progress">Verificando código de confirmación...</string>
    <string name="ev_login_progress">Verificando cuenta de Estación Vital</string>
    <string name="validation_suscriptions_limit_msg">Se ha alcanzado el límite de suscripciones máximas permitidas por Estación Vital</string>
    <string name="club_catalog_process">Obteniendo suscripciones...</string>
    <string name="validation_suscription_required_msg">Debe estar suscrito al menos a un club de Estación Vital para continuar con el registro</string>
    <string name="subscription_club_progress_msg">Suscribiéndose a club %s...</string>
    <string name="success_club_subscription_msg">La suscripción a los clubes solicitados ha sido realizada correctamente</string>
    <string name="success_new_club_msg">Se ha suscrito exitosamente al club %s</string>
    <string name="custom_ws_message">No se procesó correctamente la solicitud. Razón: %s</string>
    <string name="active_subscriptions_progress">Obteniendo suscripciones activas...</string>
    <string name="required_input_name">El nombre es requerido</string>
    <string name="required_input_last_name">El apellido es requerido</string>
    <string name="required_input_email">El correo es requerido</string>
    <string name="required_input_birth_date">La fecha de nacimiento es requerida</string>
    <string name="registration_progress">Registrando cuenta de Estación Vital...</string>
    <string name="registration_profile_activity_title">Registro en Estación Vital</string>
    <string name="success_ev_registration_msg">Cuenta creada exitosamente</string>
    <string name="validation_invalid_email">El correo es inválido</string>
    <string name="invalid_registration_data">Datos ingresados son inválidos. Favor verificar e intente nuevamente</string>
    <string name="title_activity_main_drawer">MainActivityDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_home">Inicio</string>
    <string name="drawer_profile">Perfil</string>
    <string name="drawer_chat_free">Pregunta de salud Gratis</string>
    <string name="drawer_chat_premium">Chat Premium</string>
    <string name="drawer_documents">Documentos</string>
    <string name="drawer_articles">Artículos</string>
    <string name="drawer_chats_section">Chats</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_nav_edit_profile">Editar Perfil</string>
    <string name="updating_profile_progress">Actualizando Registro</string>
    <string name="article_categories_progress">Obteniendo categorías de artículos...</string>
    <string name="title_fragment_categories">Categorías de Artículos</string>
    <string name="title_activity_article_selection">%s</string>
    <string name="blog_article_progress">Obteniendo artículos...</string>
    <string name="share_msg">Compartir artículo vía...</string>
    <string name="profile_fetch_progress">Obteniendo información de perfil...</string>
    <string name="drawer_logout">Cerrar sesión</string>
    <string name="dialog_title_logout">¿Cerrar sesión?</string>
    <string name="dialog_msg_logout">Su sesión actual se cerrará y volverá a la pantalla inicial de verificación de número para inicio de sesión.</string>
    <string name="dialog_yes_logout">Cerrar sesión</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="logout_progress">Cerrar sesión</string>

    <string name="input_message_hint">Escribe un mensaje</string>
    <string name="chat_getting_conversations_history">Obteniendo Historial de conversaciones...</string>
    <string name="loading_specialties_msg">Cargando Especialidades</string>
    <string name="select_specialty_label">Selecciona una especialidad:</string>
    <string name="select_specialty_button">Solicitar Chat</string>
    <string name="cancel_specialty_button">Cancelar</string>

    <string name="previous">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="placeholder_pager">Página %d de %d</string>
    <string name="no_register_label">Aún no existen registros de chat</string>
    <string name="channel_name">Estacion Vital</string>
    <string name="loading_doctor_availability">Verificando disponibilidad de doctor</string>
    <string name="title_confirmation_doctor_available">No hay doctor disponible</string>
    <string name="message_no_doctor_available">No se encuentran doctores disponibles en su especialidad seleccionada, sin embargo puede crear un nuevo chat y esperar la respuesta del doctor.</string>
    <string name="dialog_yes_no_doctor_available">Continuar</string>
    <string name="loading_examination_creation">Creando nueva conversación...</string>
    <string name="loading_messages_channel">Cargando mensajes de la conversación</string>
    <string name="message_validating_coupon">Validando cupon...</string>

    <string name="document_progress">Cargando documentos...</string>
    <string name="document_fetch_error">Ocurrió un error al cargar los documentos</string>
    <string name="label_validate_coupon">Estimado cliente, por favor ingrese su cupón para proceder a su nueva conversación.</string>
    <string name="coupon_label">Cupón</string>
    <string name="title_payment_method">Escoja su método de pago</string>
    <string name="message_payment_method">Estimado cliente, escoja el método de pago a utilizar por favor</string>
    <string name="dialog_coupon">Tengo un cupón</string>
    <string name="dialog_credit_card">Pago con tarjeta (Valor $6.99)</string>
    <string name="session_expired_msg">Su sesión ha caducado</string>
    <string name="chat_client_creation">Creando cliente de chat</string>
    <string name="label_fab_menu_chat">Escoja el tipo de chat a ir</string>
    <string name="label_fab_button_chat_premium">Chat Premium</string>
    <string name="label_fab_button_chat_free">Pregunta de salud gratis</string>
    <string name="title_activity_validate_coupon">Ingrese su cupón</string>
    <string name="invalid_coupon_msg">El cupón ingresado es inválido.</string>
    <string name="document_title_placeholder">%s - %s</string>
    <string name="default_notification_title">Notificación de Estación Vital</string>
    <string name="title_notification_new_message">Nuevo mensaje</string>
    <string name="title_notification_added_channel">Agregado a un canal</string>
    <string name="title_notification_invited_to_channel">Invitado a un canal</string>
    <string name="title_notification_removed_from_channel">Removido de un canal</string>
    <string name="title_chat_activity">Chat con %s</string>
    <string name="disabled_free_chat_message">El envío de mensajes se ha desabilitado debido a que este es un chat Gratis</string>
    <string name="send_message_error">Ocurrió un error al enviar el mensaje</string>
    <string name="label_doctor_left">Se ha terminado la sesión de chat, puede ver el documento de esta sesión en la sección de documentos.</string>
    <string name="label_doctor_joined">El doctor se ha unido a la conversación.</string>
    <string name="label_no_messages_chat">Escriba un mensaje para iniciar la conversación.</string>
    <string name="label_validate_credit_card">Estimado cliente, ingrese los datos que se le solicita pra procesar su tarjeta de crédito.</string>
    <string name="holder_credit_card_label">Nombre del propietario</string>
    <string name="number_credit_card_label">Número de tarjeta</string>
    <string name="nexpMonth_credit_card_label">Mes</string>
    <string name="expYear_credit_card_label">Año</string>
    <string name="cvc_credit_card_label">CVC</string>
    <string name="msg_processing_credit_card">Procesando tarjeta de crédito...</string>
    <string name="msg_error_processing_credit_card">Ocurrió un error procesando la tarjeta de crédito</string>
    <string name="message_free_chat_banner">Usted tiene permiso a enviar un solo mensaje por chat gratis cada 8 horas. Su mensaje será atendido en un lapso máximo de 24 horas.</string>
    <string name="message_free_chat_prohibited">Usted tiene permiso para crear un nuevo chat gratis solamente una vez cada 8 horas.</string>
    <string name="loading_channel_message">Cargando canal de chat...</string>
    <string name="title_activity_recent_articles">Artículos recientes</string>
    <string name="blog_recent_articles_progress">Obteniendo artículos recientes...</string>
    <string name="validate_suscriptions_error">Ocurrió un error al verificar las suscripciones activas de estación vital</string>
    <string name="validation_club_suscription_progress">Validando suscripciones al club de Estación Vital</string>
    <string name="msg_doctor_leaved">El doctor ha abandonado la conversación.</string>
    <string name="msg_doctor_leaved_message">El doctor ha abandonado la conversación puede ver su documento en la sección documentos.</string>
    <string name="dialog_yes_doctor_leave">Aceptar</string>
    <string name="title_dialog_warning">Advertencia</string>
    <string name="dialog_yes_chat_free">Aceptar</string>
    <string name="connection_error_msg">Error de conexión. Revise que tenga conexión a internet</string>
    <string name="fragment_title_free_chat">Pregunta de salud Gratis</string>
    <string name="fragment_title_paid_chat">Chat Premium</string>
    <string name="back">Regresar</string>

</resources>
