<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.estacionvital.patienthub.ui.activities.TwilioChatActivity">

    <TextView
        android:id="@+id/label_no_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/label_no_messages_chat"/>
    <TextView
        android:id="@+id/free_chat_warning_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recycler_messages"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:padding="10dp"
        android:textStyle="bold"
        android:visibility="gone"
        android:text="@string/message_free_chat_banner"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_messages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintTop_toBottomOf="@id/free_chat_warning_text_view"

        ></android.support.v7.widget.RecyclerView>
    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/input_message_hint"
        android:enabled="false"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/image_button_send"
        />
    <ImageButton

        android:id="@+id/image_button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_send_grey600_24dp"
        android:background="@color/colorTransparent"
        app:layout_constraintLeft_toRightOf="@id/edit_text_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"

        app:layout_constraintTop_toBottomOf="@+id/recycler_messages"
        />
</android.support.constraint.ConstraintLayout>
